tests/paczka1/small_fuzzy/48529199.err
Error in line 1: YlicW6Hj S7 62,4
Error in line 3: NWsY7phg8 A595 16,6
Error in line 5: NWsY7phg8 S835 69,1
Error in line 2: YlicW6Hj S835 47,3
